opam-version: "2.0"

synopsis:"A simple OCaml REST API"
description: "A simple OCaml REST API server using cohttp that returns a list of users and books"

license: "MIT"
homepage: "https://github.com/dinakajoy/simple_ocaml_rest_api_server"
bug-reports: "https://github.com/dinakajoy/simple_ocaml_rest_api_server/issues"

author: "Odinaka Joy <dinakajoy@gmail.com>"
maintainer: "Odinaka Joy <dinakajoy@gmail.com>"

depends: [
  "dune" {>= "3.17.2"}
  "ocaml" {>= "4.14.1"}
  "yojson" {>= "2.2.2"}
  "cohttp-lwt-unix" {>= "5.0.0"}
  "lwt" {>= "5.6.0"}
]
